--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/vannucci/interview-project#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "passport": "^0.4.0",
     "pug": "^2.0.3"
   },
   "devDependencies": {
